--- a/aluramidi-curso-aula4/index.html
+++ b/aluramidi-curso-aula4/index.html
@@ -18,20 +18,20 @@
 </head>
 <body>
 
-    <h1 class="titulo">Batery</h1>
+    <h1 class="titulo">Lana Del Rey</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
-        <button class="tecla tecla_clap">Clap</button>
-        <button class="tecla tecla_tim">Tim</button>
+        <button class="tecla tecla_pom">VG</button>
+        <button class="tecla tecla_clap">Cherry</button>
+        <button class="tecla tecla_tim">Love</button>
 
-        <button class="tecla tecla_puff">Puff</button>
-        <button class="tecla tecla_splash">Splash</button>
-        <button class="tecla tecla_toim">Toim</button>
+        <button class="tecla tecla_puff">Ride</button>
+        <button class="tecla tecla_splash">BB</button>
+        <button class="tecla tecla_toim">TOW</button>
 
-        <button class="tecla tecla_psh">Psh</button>
-        <button class="tecla tecla_tic">Tic</button>
-        <button class="tecla tecla_tom">Tom</button>
+        <button class="tecla tecla_psh">13B</button>
+        <button class="tecla tecla_tic">Radio</button>
+        <button class="tecla tecla_tom">TBD</button>
     </section>
 
     <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
