--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
     <h1 class="titulo">Lana Del Rey</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">VG</button>vídeo games
+        <button class="tecla tecla_pom">VG</button>
         <button class="tecla tecla_clap">Cherry</button>
         <button class="tecla tecla_tim">Love</button>
 
         <button class="tecla tecla_puff">Ride</button>
-        <button class="tecla tecla_splash">BB</button>Brooklyn Baby
-        <button class="tecla tecla_toim">TOW</button>the other woman
+        <button class="tecla tecla_splash">BB</button>
+        <button class="tecla tecla_toim">TOW</button>
 
         <button class="tecla tecla_psh">13B</button> 13 beaches
         <button class="tecla tecla_tic">Radio</button> radio
         <button class="tecla tecla_tom">TIWMUG</button> this is what make us girls remoer (depois)
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
+    <audio src="sounds/videogames.mp3" id="som_tecla_pom"></audio>
+    <audio src="sounds/cherry.mp3" id="som_tecla_clap"></audio>
+    <audio src="sounds/love.mp3" id="som_tecla_tim"></audio>
+    <audio src="sounds/ride.mp3" id="som_tecla_puff"></audio>
+    <audio src="sounds/bb.mp3" id="som_tecla_splash"></audio>
+    <audio src="sounds/tow.mp3" id="som_tecla_toim"></audio>
+    <audio src="sounds/13 Beaches.mp3" id="som_tecla_psh"></audio>
+    <audio src="sounds/Radio.mp3" id="som_tecla_tic"></audio>
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
     <script src="main.js"></script>
